# sgsPy

./: .gitignore  .gitmodules  DoxygenLayout.xml  LICENSE.txt  README.md  README_8md.html  ____init_____8py.html  ____init_____8py.js  access_8h.html  access_8h_source.html  ahels_8py.html  ahels_8py.js  breaks_8h.html  breaks_8h.js  breaks_8h_source.html  breaks_8py.html  breaks_8py.js  build.bat  build.sh  build_dist.bat  build_dist.sh  calculate_2____init_____8py.html  calculate_2distribution_2____init_____8py.html  calculate_2pca_2____init_____8py.html  calculate_2representation_2____init_____8py.html  classsgs_1_1clhs_1_1CLHSDataManager-members.html  classsgs_1_1clhs_1_1CLHSDataManager.html  classsgs_1_1helper_1_1RandValController-members.html  classsgs_1_1helper_1_1RandValController.html  classsgs_1_1helper_1_1RandValController.js  classsgs_1_1helper_1_1Variance-members.html  classsgs_1_1helper_1_1Variance.html  classsgs_1_1raster_1_1GDALRasterWrapper-members.html  classsgs_1_1raster_1_1GDALRasterWrapper.html  classsgs_1_1strat_1_1IndexStorageVectors-members.html  classsgs_1_1strat_1_1IndexStorageVectors.html  classsgs_1_1utils_1_1raster_1_1SpatialRaster-members.html  classsgs_1_1utils_1_1raster_1_1SpatialRaster.html  classsgs_1_1utils_1_1vector_1_1SpatialVector-members.html  classsgs_1_1utils_1_1vector_1_1SpatialVector.html  (+364 more)
.github/workflows/: deploy.yml  deploy_linux.yml  deploy_windows.yml  doxygen.yml  test.yml  test_build.yml  test_build_cache.yml  test_manylinux.yml
docs/: README.md
scripts/: build.bat  build.sh  build_dist.bat  build_dist.sh  install.bat  install.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  files_0.js  (+87 more)
sgs/: __init__.py  meson.build  pybind.cpp
sgs/calculate/: __init__.py  meson.build
sgs/calculate/allocation/: __init__.py  allocation.py
sgs/calculate/coobs/: __init__.py  coobs.py
sgs/calculate/distance/: __init__.py  distance.py
sgs/calculate/lhs_optimal/: __init__.py  lhs_optimal.py
sgs/calculate/pca/: meson.build  pca.cpp  pca.h  pca.py
sgs/calculate/pop/: __init__.py  pop.py
sgs/calculate/principal_components/: __init__.py  principal_components.py
sgs/calculate/representation/: representation.py
sgs/calculate/sample_size/: __init__.py  sample_size.py
sgs/cpp/: meson.build  test_module.c
sgs/sample/: __init__.py  meson.build
sgs/sample/ahels/: ahels.py  meson.build
sgs/sample/balanced/: __init__.py  balanced.cpp  balanced.py  meson.build  test_module.cpp
sgs/sample/balanced/BalancedSampling/src/: hlpm2.cc
sgs/sample/clhs/: clhs.cpp  clhs.h  clhs.py
sgs/sample/existing/: __init__.py  existing.py
sgs/sample/nc/: meson.build  nc.py
sgs/sample/srs/: meson.build  srs.cpp  srs.h  srs.py
sgs/sample/strat/: meson.build  strat.cpp  strat.h  strat.py
sgs/sample/sys_strat/: __init__.py  sys_strat.py
sgs/sample/systematic/: meson.build  systematic.cpp  systematic.h  systematic.py
sgs/stratify/: __init__.py  meson.build
sgs/stratify/breaks/: .breaks.cpp.swp  breaks.cpp  breaks.h  breaks.py  meson.build
sgs/stratify/kmeans/: kmeans.py  meson.build
sgs/stratify/map/: __init__.py  map.h  map.py  map_stratifications.cpp  map_stratifications.py  meson.build
sgs/stratify/poly/: meson.build  poly.cpp  poly.h  poly.py
sgs/stratify/quantiles/: meson.build  quantiles.cpp  quantiles.h  quantiles.py
sgs/utils/: __init__.py  access.cpp  access.h  access.py  existing.h  helper.h  meson.build  plot.py  raster.cpp  raster.h  raster.py  raster_pybind.cpp  test_module.cpp  useful_function.py  vector.cpp  vector.h  vector.py  vector_pybind.cpp  write.cpp  write.h  write.py
sgspy/: __init__.py  meson.build  pybind.cpp
sgspy/calculate/: __init__.py  meson.build
sgspy/calculate/distribution/: __init__.py  distribution.py  meson.build
sgspy/calculate/pca/: meson.build  pca.h  pca.py
sgspy/calculate/representation/: meson.build
sgspy/sample/: meson.build
sgspy/sample/ahels/: meson.build
sgspy/sample/clhs/: clhs.h  clhs.py  meson.build
sgspy/sample/srs/: meson.build  srs.h  srs.py
sgspy/sample/strat/: meson.build  strat.h  strat.py
sgspy/sample/systematic/: meson.build  systematic.h  systematic.py
sgspy/stratify/: meson.build
sgspy/stratify/breaks/: breaks.h  breaks.py
sgspy/stratify/kmeans/: kmeans.h
sgspy/utils/: __init__.py  access.h  dist.h  existing.h  helper.h  meson.build  raster.h  raster.py  vector.cpp  vector.py
test_outputs/: test_file_out.dbf  test_file_out.geojson  test_file_out.shp  test_file_out.shx
tests/: test_calc_allocation.py  test_calc_distribution.py  test_calc_lhs_optimal.py  test_calc_pca.py  test_calc_pop.py  test_calc_principal_components.py  test_calc_representation.py  test_calc_sample_size.py  test_hello.py  test_sample_ahels.py  test_sample_balanced.py  test_sample_clhs.py  test_sample_existing.py  test_sample_nc.py  test_sample_srs.py  test_sample_strat.py  test_sample_systematic.py  test_stratify_breaks.py  test_stratify_kmeans.py  test_stratify_map.py  test_stratify_poly.py  test_stratify_quantiles.py  test_utils_access.py  test_utils_raster.py  test_utils_vector.py
tests/calculate/: test_coobs.py  test_distance.py
tests/files/: __init__.py  existing.geojson  mraster_small_zq90.npy  mraster_zsd.npy  pca_result.tif  sraster2.tif  sraster_strata.npy  strat_breaks_pz2_R.tif  strat_breaks_zq90_R.tif  strat_poly_test1_R.tif  strat_poly_test2_R.tif  strat_quantiles_pz2_R.tif  strat_quantiles_zq90_R.tif
tests/sample/: test_balanced.py  test_nc.py  test_srs.py  test_sys_strat.py
tests/stratify/: test_breaks.py  test_kmeans.py  test_map.py  test_poly.py  test_quantiles.py
tests/utils/: test_plot.py  test_raster.py  test_vector.py  test_write.py
(+23 files in other folders)
