[build-system]
build-backend = "mesonpy"
requires = [
	"meson-python == 0.18.0",
	"pybind11 == 3.0.0",
	"daal-devel == 2025.9.0",
]

[project]
name = "sgspy"
version = "1.0.5"
dependencies = [
	"numpy", #TODO add version
	"matplotlib", #TODO add version
	
	#the following are the required packages which are included as part of daal-devel
	"daal==2025.9.0",
	"tbb==2022.*",
	"mkl==2025.3.0",
	"onemkl-license==2025.3.0",
]

[project.optional-dependencies]
test = [
	"pytest", #TODO add version
	"geopandas", #TODO add version
]

#license = "MIT"
#license-files = [ 'LICENSE.txt' ]

[tool.meson-python.args]
setup = ['-Db_vscrt=md']

[tool.pytest.ini_options]
pythonpath = "."
testpaths = [ "tests" ]
