[build-system]
build-backend = "mesonpy"
requires = [
	"meson-python == 0.18.0",
	"pybind11 == 3.0.0",
	"daal-devel == 2025.9.0",
]

[project]
name = "sgspy"
description = "Structurally Guided Sampling"
readme = "README.md"
authors = [{name = "Joseph B Meyer"}]
version = "1.0.6"
requires-python = ">=3.10" #tested/distributed as far back as 3.10 but it may be compatible with earlier versions
dependencies = [
	"numpy",
	"matplotlib",
	
	#the following are the required packages which contain the dynamically libraries used by daal-devel
	#but naturally daal-devel is not required as a user dependency
	"daal==2025.9.0",
	"tbb==2022.*",
	"mkl==2025.3.0",
	"onemkl-license==2025.3.0",
]
license="MIT"
license-files = ["LICENSE.txt"]
classifiers = [
	'Intended Audience :: Science/Research',
	'Intended Audience :: Developers',
	'Programming Language :: C++',
	'Programming Language :: Python',
	'Programming Language :: Python :: 3',
	'Programming Language :: Python :: 3.10',
	'Programming Language :: Python :: 3.11',
	'Programming Language :: Python :: 3.12',
	'Programming Language :: Python :: 3.13',
	'Programming Language :: Python :: 3.14',
	'Operating System :: Microsoft :: Windows',
	'Operating System :: Unix',
]

[project.optional-dependencies]
test = [
	"pytest",
	"geopandas",
]

#license = "MIT"
#license-files = [ 'LICENSE.txt' ]

[tool.meson-python.args]
setup = ['-Db_vscrt=md']

[tool.pytest.ini_options]
pythonpath = "."
testpaths = [ "tests" ]
