oneapi_dir = root_dir + '/sgs/extern/oneDAL/cpp/oneapi/dal/'
daal_dir = root_dir + '/sgs/extern/oneDAL/cpp/daal/src/'
input_files = [
  oneapi_dir + 'exceptions.cpp',
  oneapi_dir + 'algo/basic_statistics/common.cpp',
  oneapi_dir + 'algo/pca/common.cpp',
  oneapi_dir + 'algo/pca/infer_types.cpp',
  oneapi_dir + 'algo/pca/train_types.cpp',
  oneapi_dir + 'algo/pca/backend/cpu/finalize_train_kernel_cov.cpp',
  oneapi_dir + 'algo/pca/backend/cpu/infer_kernel.cpp',
  oneapi_dir + 'algo/pca/backend/cpu/partial_train_kernel_cov.cpp',
  oneapi_dir + 'algo/pca/backend/cpu/train_kernel_common.cpp',
  oneapi_dir + 'algo/pca/backend/cpu/train_kernel_cov.cpp',
  oneapi_dir + 'algo/pca/detail/finalize_train_ops.cpp',
  oneapi_dir + 'algo/pca/detail/infer_ops.cpp',
  oneapi_dir + 'algo/pca/detail/partial_train_ops.cpp',
  oneapi_dir + 'algo/pca/detail/train_ops.cpp',
  oneapi_dir + 'algo/pca/parameters/cpu/train_parameters.cpp',
  oneapi_dir + 'backend/memory.cpp',
  oneapi_dir + 'backend/communicator.cpp',
  oneapi_dir + 'detail/array_impl.cpp',
  oneapi_dir + 'detail/chunked_array_impl.cpp',
  oneapi_dir + 'detail/common.cpp',
  oneapi_dir + 'detail/cpu.cpp',
  oneapi_dir + 'detail/cpu_info.cpp',
  oneapi_dir + 'detail/cpu_info_impl.cpp',
  oneapi_dir + 'detail/error_messages.cpp',
  oneapi_dir + 'detail/global_context.cpp',
  oneapi_dir + 'detail/global_context_impl.cpp',
  oneapi_dir + 'detail/memory_impl_host.cpp',
  oneapi_dir + 'detail/policy.cpp',
  oneapi_dir + 'detail/serialization.cpp',
  oneapi_dir + 'detail/spmd_policy.cpp',
  oneapi_dir + 'spmd/communicator.cpp',
  oneapi_dir + 'spmd/exceptions.cpp',
  oneapi_dir + 'table/common.cpp',
  oneapi_dir + 'table/csr.cpp',
  oneapi_dir + 'table/heterogen.cpp',
  oneapi_dir + 'table/homogen.cpp',
  oneapi_dir + 'table/backend/csr_kernels.cpp',
  oneapi_dir + 'table/backend/heterogen_kernels.cpp',
  oneapi_dir + 'table/backend/homogen_kernels.cpp',
  oneapi_dir + 'table/backend/convert/common.cpp',
  oneapi_dir + 'table/backend/convert/common_convert.cpp',
  oneapi_dir + 'table/backend/convert/copy_convert.cpp',
  oneapi_dir + 'table/detail/table_builder.cpp',
  oneapi_dir + 'table/detail/table_kinds.cpp',
  oneapi_dir + 'table/detail/table_utils.cpp',

  daal_dir + 'algorithms/covariance/covariance_dense_default_batch_fpt_cpu.cpp',
  daal_dir + 'algorithms/covariance/covariance_dense_default_batch_fpt_dispatcher.cpp',
  daal_dir + 'algorithms/covariance/covariance_dense_default_online_fpt_cpu.cpp',
  daal_dir + 'algorithms/covariance/covariance_dense_default_online_fpt_dispatcher.cpp',
  daal_dir + 'algorithms/covariance/covariance_hyperparameter.cpp',
  daal_dir + 'algorithms/covariance/covariance_input.cpp',
  daal_dir + 'algorithms/covariance/covariance_online_parameter.cpp',
  daal_dir + 'algorithms/covariance/covariance_parameter.cpp',
  daal_dir + 'algorithms/covariance/covariance_partialresult.cpp',
  daal_dir + 'algorithms/covariance/covariance_partialresult_fpt.cpp',
  daal_dir + 'algorithms/covariance/covariance_result.cpp',
  daal_dir + 'algorithms/covariance/covariance_result_fpt.cpp',
  daal_dir + 'algorithms/pca/pca_baseparameter.cpp',
  daal_dir + 'algorithms/pca/pca_baseparameter_fpt.cpp',
  daal_dir + 'algorithms/pca/pca_dense_base_fpt_cpu.cpp',
  daal_dir + 'algorithms/pca/pca_dense_correlation_base_fpt_cpu.cpp',
  daal_dir + 'algorithms/pca/pca_dense_correlation_batch_fpt_cpu.cpp',
  daal_dir + 'algorithms/pca/pca_dense_correlation_batch_fpt_dispatcher.cpp',
  daal_dir + 'algorithms/pca/pca_dense_correlation_online_fpt_cpu.cpp',
  daal_dir + 'algorithms/pca/pca_dense_correlation_online_fpt_dispatcher.cpp',
  daal_dir + 'algorithms/pca/pca_input.cpp',
  daal_dir + 'algorithms/pca/pca_onlineparameter_correlation_fpt.cpp',
  daal_dir + 'algorithms/pca/pca_partialresult_correlation.cpp',
  daal_dir + 'algorithms/pca/pca_partialresult_correlation_fpt.cpp',
  daal_dir + 'algorithms/pca/pca_result.cpp',
  daal_dir + 'algorithms/pca/pca_result_fpt.cpp',
  daal_dir + 'algorithms/pca/pca_result_impl.cpp',
  daal_dir + 'algorithms/pca/pca_result_impl_fpt.cpp',
  daal_dir + 'externals/service_thread_declar_mkl.cpp',
  daal_dir + 'externals/service_memory.cpp',
  daal_dir + 'data_management/aos_numeric_table.cpp',
  daal_dir + 'data_management/csr_numeric_table.cpp',
  daal_dir + 'data_management/daal_factory_impl.cpp',
  daal_dir + 'data_management/data_collection.cpp',
  daal_dir + 'data_management/data_conversion.cpp',
  daal_dir + 'data_management/data_conversion_cpu.cpp',
  daal_dir + 'data_management/data_management.cpp',
  daal_dir + 'data_management/finiteness_checker.cpp',
  daal_dir + 'data_management/finiteness_checker_cpu.cpp',
  daal_dir + 'data_management/merged_numeric_table.cpp',
  daal_dir + 'data_management/roc_auc_score.cpp',
  daal_dir + 'data_management/row_merged_numeric_table.cpp',
  daal_dir + 'data_management/service_numeric_table.cpp',
  daal_dir + 'data_management/soa_numeric_table.cpp',
  daal_dir + 'data_management/train_test_split.cpp',
  daal_dir + 'data_management/numeric_table.cpp',
  daal_dir + 'data_management/homogen_numeric_table.cpp',
  daal_dir + 'externals/service_memory.cpp',
  daal_dir + 'externals/service_service.cpp',
  daal_dir + 'externals/service_thread_declar_mkl.cpp',
  daal_dir + 'services/env_detect.cpp',
  daal_dir + 'services/error_handling.cpp',
  daal_dir + 'services/service_algo_utils.cpp',
  daal_dir + 'services/compiler/generic/env_detect_features.cpp',
  daal_dir + 'services/service_topo.cpp',
  daal_dir + 'threading/threading.cpp',
  daal_dir + 'threading/service_thread_pinner.cpp',

  'pca.cpp',
]

if WIN
  #create breaks module
  py.extension_module(
    'pca', 'pca.cpp',
    #input_files,
    link_with: [
      raster_lib,
    ],
    link_args: win_link_args,
    dependencies: [lib_deps],
    include_directories: [
      inc_dir,
      utils_inc_dir,
      oneapi_inc_dir,
      oneapi_daal_inc_dir,
      oneapi_daal_include_inc_dir
    ],
    cpp_args: [
      '-D__ONEDAL_IDE_MODE__', #read why I do this here: 
                              #https://github.com/uxlfoundation/oneDAL/blob/340926e2284d2c1cc87238538fcba2b265aa4980/cpp/oneapi/dal/backend/dispatcher_cpu.hpp#L22
    ],
    install: true,
  )
else
  #create srs module
  py.extension_module(
    'pca', 'pca.cpp',
    #input_files,
    dependencies: [lib_deps, tbb_lib_deps, oneDAL_lib_deps, pybind11_dep],
    include_directories: [
      inc_dir,
      utils_inc_dir,
      pip_inc_dir,
    ],
    objects: [
      raster_obj,
    ],
    #cpp_args: [
    #  '-D__ONEDAL_IDE_MODE__', #read why I do this here: 
                              #https://github.com/uxlfoundation/oneDAL/blob/340926e2284d2c1cc87238538fcba2b265aa4980/cpp/oneapi/dal/backend/dispatcher_cpu.hpp#L22
                              #  '-DDAAL_FPTYPE=float',
                              #   '-DDAAL_CPU=sse2', #TODO have this depend on CPU type! from CPUID
                              #  '-DDAAL_KERNEL_SSE2'
                              #],
    install: true,
  )
endif
